WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77373
REGRESSION (
r91935
): text-combine fails
https://bugs.webkit.org/show_bug.cgi?id=77373
Summary
REGRESSION (r91935): text-combine fails
mitz
Reported
2012-01-30 15:12:11 PST
To reproduce, open the URL. The number 1200 should be rendered horizontally in quarter-width glyphs.
Attachments
Do not use the vertical-glyph getter for horizontal, non-fullwidth glyphs
(3.12 KB, patch)
2012-01-30 17:18 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-01-30 15:12:31 PST
<
rdar://problem/10778045
>
mitz
Comment 2
2012-01-30 17:18:18 PST
Created
attachment 124636
[details]
Do not use the vertical-glyph getter for horizontal, non-fullwidth glyphs
Darin Adler
Comment 3
2012-01-30 17:22:02 PST
Comment on
attachment 124636
[details]
Do not use the vertical-glyph getter for horizontal, non-fullwidth glyphs View in context:
https://bugs.webkit.org/attachment.cgi?id=124636&action=review
> Source/WebCore/platform/graphics/mac/GlyphPageTreeNodeMac.cpp:68 > + } else if ((fontData->platformData().widthVariant() != RegularWidth && CTFontGetGlyphsForCharacters(fontData->platformData().ctFont(), buffer, glyphs.data(), bufferLength)) > + || (fontData->platformData().widthVariant() == RegularWidth && wkGetVerticalGlyphsForCharacters(fontData->platformData().ctFont(), buffer, glyphs.data(), bufferLength))) {
I think this should use ? : or an if statement rather than calling widthVariant twice. Maybe in a helper function.
mitz
Comment 4
2012-01-30 17:58:12 PST
Fixed in <
http://trac.webkit.org/r106310
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug