<rdar://problem/10778045> REGRESSION (r91935): text-combine fails https://bugs.webkit.org/show_bug.cgi?id=77373

Reviewed by Darin Adler.

Source/WebCore:

Removed tests that were failing because of this bug from the Lion skipped
list.

* platform/graphics/mac/GlyphPageTreeNodeMac.cpp:
(WebCore::GlyphPage::fill): Changed to use CTFontGetGlyphsForCharacters,
rather than wkGetVerticalGlyphsForCharacters, for non-fullwidth fonts.

LayoutTests:

Removed tests that were failing because of this bug from the skipped list.

* platform/mac-lion/Skipped:



Canonical link: https://commits.webkit.org/94271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106310 268f45cc-cd09-0410-ab3c-d52691b4dbfc